--- a/src/components/SidePanel/templates/styles.scss
+++ b/src/components/SidePanel/templates/styles.scss
@@ -83,7 +83,7 @@
     color: var(--textColor);
     font-size: 18px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 400;
     line-height: normal;
   }
 }
